Fix collapse menu

--- a/src/ActionCatalog/ActionCatalog.scss
+++ b/src/ActionCatalog/ActionCatalog.scss
@@ -13,3 +13,32 @@
     box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.2);
     outline: none;
 }
+
+.hand {
+	cursor: pointer;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 20px;
+	height: 100%;
+	background-color: rgba(226, 234, 240, 0.35);
+}
+
+.nestable-icon {
+	position: absolute;
+	top: 15px;
+	left: 15px;
+	background-repeat: no-repeat;
+	width: 8px;
+	height: 12px;
+	z-index: 1;
+}
+
+.icon-minus-gray {
+	background-image: url("data:image/svg+xml,%3Csvg width='6' height='10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 9l4-4-4-4' stroke='%238AACC2' stroke-width='2' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+	transform: rotate(90deg);
+}
+
+.icon-plus-gray {
+	background-image: url("data:image/svg+xml,%3Csvg width='6' height='10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 9l4-4-4-4' stroke='%238AACC2' stroke-width='2' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
