--- a/src/NestedGroup/components/NestedItem/NestedItem.scss
+++ b/src/NestedGroup/components/NestedItem/NestedItem.scss
@@ -86,21 +86,7 @@
 	width: calc(100% - 471.5px);
 	border-right: 1px solid #d8d8d8;
 
-	&::before {
-		content: "";
-		position: absolute;
-		top: 15px;
-		left: 16px;
-		background-image: url("data:image/svg+xml,%3Csvg width='6' height='10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 9l4-4-4-4' stroke='%238AACC2' stroke-width='2' fill='none' fill-rule='evenodd' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-		background-repeat: no-repeat;
-		width: 8px;
-		height: 12px;
-	}
-
 	&_expand {
-		&::before {
-			transform: rotate(90deg);
-		}
 
 		.kit-nested-item__name {
 			font-weight: 600;
